RESOLVED FIXED33816
Crashes in Geolocation code due to refcounting, observer balance issues
https://bugs.webkit.org/show_bug.cgi?id=33816
Summary Crashes in Geolocation code due to refcounting, observer balance issues
Steve Falkenburg
Reported 2010-01-18 16:52:32 PST
Geolocation is crashing for me during development. Issues are caused by a reference to a disposed this ptr in GeoNotifier, and an add/remove observer balance issue in GeolocationController.
Attachments
Patch (2.90 KB, patch)
2010-01-18 16:55 PST, Steve Falkenburg
sam: review+
Steve Falkenburg
Comment 1 2010-01-18 16:55:48 PST
Steve Falkenburg
Comment 2 2010-01-22 14:07:41 PST
This is fixed.
Note You need to log in before you can comment on or make changes to this bug.